added managedBySystem and contactDescriptionField fields
